--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<html><title>下载Diamond OS文件</title><a href="pptos.pptx">点此下载<br></a><a href='Minecraft MTR模组铁路 by bilibili -小唐玩电脑-.zip'>点击下载MTR铁路</a></html>
+<html><title>小唐的文件下载</title><a href="pptos.pptx">点此下载<br></a><a href='Minecraft MTR模组铁路 by bilibili -小唐玩电脑-.zip'>点击下载MTR铁路<br></a><a href='diamondos.pptx'>点击下载Diamond OS2.0 ppt文件<br></a></html>
 
 
